gpu: Don't destroy the ui::PlatformEventSource too early

This patch fixes a bug introduced by r438239 where the
ui::PlatformEventSource was destroyed before entering the GPU message
loop.

BUG=674350

Review-Url: https://codereview.chromium.org/2584513002
Cr-Commit-Position: refs/heads/master@{#439465}

Former-commit-id: 82befc59e91e2befbe289ea85b5f35fc9f6505e1